Fix clipped icons

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -29,7 +29,6 @@
     .tooltip > .button {
       color: var(--gray-700);
       font-size: 13px;
-      line-height: 16px;
     }
 
     &.head {
