--- a/src/styles/components/sites/_recording-row.scss
+++ b/src/styles/components/sites/_recording-row.scss
@@ -47,6 +47,7 @@
             width: 100%;
 
             .button {
+              line-height: 16px;
               overflow: hidden;
               text-align: left;
               text-overflow: ellipsis;
